<resources>
    <string name="app_name">balnature</string>
    <string name="seazersoftware">SEAZER SOFTWARE</string>
    <string name="üreten">Üreten</string>
    <string name="balnature">Bal Nature</string>
    <string name="hakkındabilgisayfametin">     Projemiz Bursa Anadolu Lisesi öğrencileri tarafından Erasmus kapsamında hazırlanan amacı doğa ve çevre bilinci oluşturup insanları doğayı korumaya ve gözetmeye yönelimli bireyler yetiştirmektir.Bu amacımızı gerçekleştirmek için bu uygulama sizeçeşitli oyunlar, eğtimler,kurumlar ve kişiye özel araçlar sağlamaktadır. Devamlılığı sağlamak için hedefimiz sonucunda belirli avantajlara ulaşabileceğiniz temalar uygulamalar ve sonucunda da sertifika verilecektir. Siz de BAL Nature ekibi olarak çıktığımız bu yola katılın ve doğayı beraber koruyalım.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yan_menu_giris">Giriş</string>
    <string name="yan_menu_menu">Menu</string>
    <string name="yan_menu_haber">Haber</string>
    <string name="yan_menu_hızlıveri">Hızlı Veri</string>
    <string name="yan_menu_veri">Veri</string>
    <string name="yan_menu_bölümler">Bölümler</string>
    <string name="yan_menu_istatistikler">İstatistikler</string>
    <string name="yan_menu_öneriler">Öneriler</string>
    <string name="yan_menu_araçlar">Araçlar</string>
    <string name="istatistiklersözleşmeler">Sözleşmeler</string>
    <string name="yan_menu_diger">Diğer</string>
    <string name="yan_menu_ayarlar">Ayarlar</string>
    <string name="yan_menu_hakkında">Hakkında</string>
    <string name="activity_ıntro_madeby">Üreten</string>
    <string name="activity_login_basit_yazı">Uygulamanın tüm özelliklerine ulaşmak için oturum aç.Hesabın yoksa oluşturabilrisin.</string>
    <string name="activity_login_oturumac">Oturum Aç</string>
    <string name="activity_login_kayıtol">Kayıt Ol</string>
    <string name="fragment_hakkinda_bilgi_urunbilgiler">Ürün Bilgileri</string>
    <string name="fragment_hakkinda_bilgi_edisyon">Edisyon</string>
    <string name="fragment_hakkinda_bilgi_sürüm">Sürüm</string>
    <string name="fragment_hakkinda_bilgi_yüklemetarihi">Yükleme Tarihi</string>
    <string name="fragment_hakkinda_bilgi_ısdeneyimi">Is Deneyimi</string>
    <string name="fragment_hakkinda_bilgi_deneyim">Deneyim</string>
    <string name="fragment_hakkinda_bilgi_hazırlayan">Hazırlayan</string>
    <string name="fragment_hakkinda_bilgi_edisyon_icerik_">Bal Nature 1.2 Beta</string>
    <string name="fragment_hakkinda_bilgi_sürüm_icerik">23B1</string>
    <string name="fragment_hakkinda_bilgi_yüklemetarihi_icerik">29.06.2023</string>
    <string name="fragment_hakkinda_bilgi_ısdeneyimi_icerik">20231.2029</string>
    <string name="fragment_hakkinda_bilgi_deneyim_icerik">BAL Nature Future Experience Pack 1000.134243.1000.0</string>
    <string name="fragment_hakkinda_iletisim_iletisim">İletişim</string>
    <string name="fragment_hakkinda_iletisim_websitemiz">Web Sitemiz</string>
    <string name="fragment_hakkinda_iletisim_instagram">Instagram</string>
    <string name="fragment_hakkinda_iletisim_eposta">E-Posta</string>
    <string name="fragment_hakkinda_iletisim_youtube">Youtube</string>
    <string name="fragment_hakkinda_iletisim_harita">Harita</string>
    <string name="fragment_hakkinda_iletisim_tikla">fragment_hakkinda_iletisim_iletisim</string>
    <string name="fragment_hakkinda_iletisim_bizeyaz">Bize Yaz</string>
    <string name="fragment_hakkinda_iletisim_metin">Bize öneri yorum şikayet ve daha fazlası için mesaj gönderin. mesajınız en kısa zamanda ekibimiz tarafından değerlenip cevaplanacaktır.</string>
    <string name="fragment_hakkinda_iletisim_konu">Konu:</string>
    <string name="fragment_hakkinda_iletisim_mesaj">Mesaj:</string>
    <string name="fragment_hakkinda_iletisim_konu_iç">Konu</string>
    <string name="fragment_hakkinda_iletisim_mesaj_iç">Metin</string>
    <string name="fragment_hakkinda_iletisim_aydınlatma">Yanda verilen aydınlatma metnini okudum ve kabul ediyorum.</string>
    <string name="fragment_hakkinda_iletisim_aydınlatma_link">Aydınlatma Metni</string>
    <string name="fragment_hakkinda_iletisim_temizle">Temizle</string>
    <string name="fragment_hakkinda_iletisim_gönder">Gönder</string>
    <string name="fragment_hakkinda_kisiler_sa">Salih Etka Akagündüz</string>
    <string name="fragment_hakkinda_kisiler_sa_ic">Projemizin genel yöneticisidir uygulamalı ve oyunların yazılım  kısmını kendisi geliştirmiştir.</string>
    <string name="fragment_hakkinda_kisiler_mu">Mustafa Turan</string>
    <string name="fragment_hakkinda_kisiler_mu_ic">Takımımızın çok değerli bir üyesidir şu anda oynadığınız oyunları Mustafa arkadalımız olmasaydı bu kalitede kesinlikle  otnayamazdınız.</string>
    <string name="fragment_hakkinda_kisiler_ba">Bahrican Sezer</string>
    <string name="fragment_hakkinda_kisiler_ba_ic">Projemizin oyun,site,tasarım gibi birçok yönüyle aynıanda  ilgilenen takımı her daim  büyütmeye çalışan çalışkan  ve azimli bir geliştiricidir</string>
    <string name="fragment_hakkinda_kisiler_en">Enes Sarikayaen</string>
    <string name="fragment_hakkinda_kisiler_en_ic">Takımımızda uzun bir süre  web tasarımcılık yapan ve  ardından oyun sektörüne  geçen hiç durmadan çalışan  azimli bir geliştirici</string>
    <string name="fragment_hakkinda_kisiler_ka">Kağan Kaya</string>
    <string name="fragment_hakkinda_kisiler_ka_ic">Takımımızda bir çok oyun  tasarlayan ve ileri derecede  tüm materyalleri tasarlamayı  bilen takımımızın değerli bir  üyesidir.</string>
    <string name="fragment_hakkinda_kisiler_le">Leyla Ulu</string>
    <string name="fragment_hakkinda_kisiler_le_ic">Takımımızın yönetim,tanıtım  ve belgeleme işleriyle uğraşan  danışman hocamız</string>
    <string name="fragment_hakkinda_tesekkur">Teşekkürler</string>
    <string name="fragment_hakkinda_tesekkur_metin_iyiki">İyiki Varsınız;</string>
    <string name="fragment_hakkinda_tesekkur_metin">Takımca bu maceraya katılmamıza olanak sağlayan başta Leyla ve Metin Hoca olmak üzerine tüm hocalarımıza,bize maddi manevi her desteği sağlayan okul yöneticilerimize,bize destek olan  tüm arkadaşlarımıza ve bu uygulamayı kullanmayı seçen tüm kullanıcılarımıza teşekkür ederiz. </string>
    <string name="fragment_login_giris_yap_girisyap">Giriş Yap</string>
    <string name="fragment_login_giris_yap_emailyadatelefon">E-Posta yada Telefon</string>
    <string name="fragment_login_giris_yap_şifre">Şifre</string>
    <string name="fragment_login_giris_yap_parolanımıunuttun">Parolanı mı unuttun ?</string>
    <string name="fragment_login_giris_yap_ilegirisyap">ile giriş yap</string>
    <string name="fragment_login_giris_yap_yada">-YADA-</string>
    <string name="fragment_login_giris_yap_birhesabınyokmu">Bir hesabın yok mu ?</string>
    <string name="fragment_login_giris_yap_kayıtol">Kayıt Ol</string>
    <string name="fragment_araclar_ara">Ara</string>
    <string name="fragment_ayarlar_text1">Hesaptan Çıkış Yap</string>
    <string name="fragment_ayarlar_text2">Hesap Verilerini Sil</string>
    <string name="fragment_ayarlar_text3">Hesabı Sil</string>
    <string name="fragment_ayarlar_text4">Temizle</string>
    <string name="fragment_ayarlar_text5">Web Sitesi</string>
    <string name="fragment_ayarlar_text6">Bize Ulaşın</string>
    <string name="fragment_ayarlar_text7">Hatırlatıcı Ayarları</string>
    <string name="fragment_ayarlar_text8">Tema</string>
    <string name="fragment_ayarlar_text9">Mevcut Dil</string>
    <string name="fragment_ayarlar_text10">Uygulama Simgesi</string>
    <string name="fragment_ayarlar_text11">Haftanın İlk Günü</string>
    <string name="fragment_ayarlar_text12">Renk Ayarları</string>
    <string name="fragment_ayarlar_text13">Destek</string>
    <string name="fragment_ayarlar_text14">Hakkında</string>
    <string name="fragment_ayarlar_text15">Bizi Değerlendir</string>
    <string name="fragment_ayarlar_text16">Bilgisayar Sürümü</string>
    <string name="fragment_ayarlar_text17">Belgeler</string>
    <string name="fragment_ayarlar_text18">FAQ</string>
    <string name="fragment_ayarlar_text19">Mevcut Dil</string>
    <string name="fragment_ayarlar_text20">Veri Önizlemesi</string>
    <string name="fragment_ayarlar_text21">Dışa Aktar</string>
    <string name="fragment_ayarlar_text22">İçe Aktar</string>
    <string name="fragment_ayarlar_text23">Yedekle</string>
    <string name="fragment_ayarlar_text24">Giriş Kodu</string>
    <string name="fragment_ayarlar_text25">OFF</string>
    <string name="fragment_ayarlar_text26">Birim Ayarları</string>
    <string name="fragment_ayarlar_text27">Transfer</string>
    <string name="fragment_ayarlar_text28">DataBase Bilgileri</string>
    <string name="fragment_ayarlar_text29">Çevrim Dış Kullanım</string>
    <string name="fragment_ayarlar_text30">Database Ayarları</string>
    <string name="fragment_ayarlar_text31">Database</string>
    <string name="fragment_ayarlar_text32">Hesap Ayarları</string>
    <string name="fragment_ayarlar_text33">Veri Kullanımı</string>
    <string name="fragment_ayarlar_text34">Hesabım</string>
    <string name="fragment_ayarlar_text35">Planınız</string>
    <string name="fragment_ayarlar_text36">BASİT</string>
    <string name="fragment_ayarlar_text37">Ayarlar</string>
    <string name="fragment_hesapayarlari_abonelikler_bilgiyönetimi">Kendiniz hakkındaki bilgileri yönetin.</string>
    <string name="fragment_hesapayarlari_abonelikler_abonelikler">Abonelikler</string>
    <string name="fragment_hesapayarlari_abonelikler_mevcutabonelikyok">Mevcut Abonelik Yok</string>
    <string name="fragment_hesapayarlari_guvenlik_kaydet">Kaydet</string>
    <string name="fragment_hesapayarlari_guvenlik_yenisifre">Yeni Şifre</string>
    <string name="fragmnet_hesapayarlari_profil_tercihlerikinokta">Tercihler :</string>
    <string name="fragmnet_hesapayarlari_profil_dogumtarigi">Doğum Tarihi</string>
    <string name="fragmnet_hesapayarlari_profil_aciklamaikinokta">Açıklama :</string>
    <string name="fragmnet_hesapayarlari_profil_soyadikinokta">Soyad :</string>
    <string name="fragmnet_hesapayarlari_profil_profiliniz">Profiliniz</string>
    <string name="fragmnet_hesapayarlari_profil_bilgileriyonet">Kendiniz hakkındaki bilgileri yönetin.</string>
    <string name="fragmnet_hesapayarlari_profil_adikinokta">Ad :</string>
    <string name="fragmnet_hesapayarlari_profil_ad">Ad</string>
    <string name="fragmnet_hesapayarlari_profil_anonim">Anonim</string>
    <string name="fragmnet_hesapayarlari_profil_soyad">Soyad</string>
    <string name="fragmnet_hesapayarlari_profil_aciklama">Açıklama</string>
    <string name="fragmnet_hesapayarlari_profil_arkaplan">Arka plan izni</string>
    <string name="fragmnet_hesapayarlari_profil_verikaydet">Uygulama verilerimi kaydedebilsin</string>
    <string name="fragmnet_hesapayarlari_profil_uygulamaaçılırken">Uygulama açılırken beni hatırla</string>
    <string name="fragmnet_hesapayarlari_profil_kaydet">Kaydet</string>
    <string name="fragment_istatistik_4_genel">Genel</string>
    <string name="fragment_istatistik_4_geridönüsüm">Geri Dönüşüm</string>
    <string name="fragment_istatistik_4_atik">Atık</string>
    <string name="fragment_istatistik_4_plastik">Plastik</string>
    <string name="fragment_istatistik_4_metal">Metal</string>
    <string name="fragment_istatistik_4_cam">Cam</string>
    <string name="fragment_istatistik_4_kagit">Kağıt</string>
    <string name="fragment_istatistik_4_tarihegöre">Tarihe Göre</string>
    <string name="fragment_istatistik_4_enfazla">En Fazla</string>
    <string name="fragment_istatistik_4_yıldız">Yıldız</string>
    <string name="fragment_login_son_işlemtamam">İşleminiz Tamamlandı</string>
    <string name="fragment_login_son_sonmetin">Bitir tuşuna basıp kaydınızı tamamlayabilirsiniz.</string>
    <string name="fragment_login_son_bitir">Bitir</string>
</resources>