<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbarrenk"
    tools:context=".fragment_istatistik_4">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabte"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/toolbarrenk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="start"
        app:tabIndicatorColor="@color/gradiant_login_renk_start"
        app:tabMode="auto"
        app:tabTextAppearance="@style/MyTabTextAppearance"
        app:tabTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem1111"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_genel" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem211"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_geridönüsüm" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_atik" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_plastik" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_metal" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_cam" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_kagit" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_tarihegöre" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_enfazla" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_istatistik_4_yıldız" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vippppp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabte" />
</androidx.constraintlayout.widget.ConstraintLayout>